* Mon Dec 13 2012 Dan Prince <dprince@redhat.com> - 1.3.0
  -OpenStack: Switch to Fog.
  -OpenStack: Add support for automatic floating IP configuration via
   'assign_floating_ip' in server group json files.
  -OpenStack: Add support for security group names.
  -OpenStack: Add endpoint configs for region, service_type, service_name.
  -OpenStack: Updated to configure ssh access within the server group.
  -Libvirt: grep correct dnsmasq leases file (use network name)
  -Libvirt: fix libvirt_use_sudo option (string conversion)

* Mon Nov 26 2012 Dan Prince <dprince@redhat.com> - 1.2.5
  - Libvirt: ping test instances to ensure they have IPs before
    trying to configure hosts, etc.
  - Generate server group IDs with using Time.now.to_f
    which gives us millisecond accuracy. This should avoid ID
    collisions which could occur if two groups were spun up
    in the same second (thus causing image name collisions, etc)
  - XenServer: Add 'cleanup_before_create' option to run instance
    cleanup before creating a new group.

* Thu Oct 8 2012 Dan Prince <dprince@redhat.com> - 1.2.4
  - XenServer: Delete VDI's that aren't in use during cleanup.

* Thu Sep 20 2012 Dan Prince <dprince@redhat.com> - 1.2.3
  - XenServer: Use vm-clone once a vm has been imported to speed up
    group creation.

* Wed Sep 19 2012 Dan Prince <dprince@redhat.com> - 1.2.2
  - Default group_type to GROUP_TYPE env variable if it
    isn't set.

* Wed Sep 19 2012 Dan Prince <dprince@redhat.com> - 1.2.1
  - Update rake tasks so they call init correctly.

* Wed Sep 19 2012 Dan Prince <dprince@redhat.com> - 1.2.0
  - Add provider for OpenStack.
  - Add bin/kytoon with commands corresponding to rake tasks.
  - Move rake tasks under 'kytoon' namespace (previously used 'group').
  - Updates to raise KytoonException instead of just raise.
  - Rename gateway_ip task to just ip.

* Thu Aug 23 2012 Dan Prince <dprince@redhat.com> - 1.1.1
  - Add 'libvirt_use_sudo' option to config file.