@@ -4,9 +4,16 @@
         {
             "hostname": "nova1",
             "memory": "1",
+            "original_xml": "/home/dprince/f17.xml",
+            "create_cow": "true"
+        },
+        {
+            "hostname": "login",
+            "memory": "1",
             "gateway": "true",
             "original_xml": "/home/dprince/f17.xml",
             "create_cow": "true"
         }
+
     ]
 }
