@@ -4,9 +4,10 @@
    'assign_floating_ip' in server group json files.
   -OpenStack: Add support for security group names.
   -OpenStack: Add endpoint configs for region, service_type, service_name.
-  -OpenStack: Updated to configure ssh access within the server group.
+  -OpenStack: Configure ssh access within the server group.
   -Libvirt: grep correct dnsmasq leases file (use network name)
   -Libvirt: fix libvirt_use_sudo option (string conversion)
+  -Libvirt: Configure ssh access within the server group.
 
 * Mon Nov 26 2012 Dan Prince <dprince@redhat.com> - 1.2.5
   - Libvirt: ping test instances to ensure they have IPs before
